--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^1.6.5",
     "crossenv": "^0.0.2-security",
     "dotenv": "^16.3.1",
+    "jsdom": "^23.2.0",
     "lodash": "^4.17.21",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
